Add boostrap, styling

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,27 @@
 <!doctype html>
 <html>
 <body>
+<div class = "container">
+	<h1>This is my To-do list.  There are many like it but this one is mine.</h1>
 
-<h1>This is my To-do list.  There are many like it but this one is mine.</h1>
+	<h2>Current Users</h2>
 
-<h2>Create New User</h2>
+	<% @users.each do |user| %>
+		<%= link_to user.name, user %>
+		<br>
+	<% end %>	
 
-<%= form_for (@user) do |t| %> 
-	<div class="field"> <%= t.label :name %><br> <%= t.text_field :name %> </div> 
-	<div class='actions'> <%= t.submit %> </div> 
-<% end %>
+	<h2>Create New User:</h2>
+
+	<%= form_for (@user) do |t| %> 
+		<div class="field"> <%= t.label :name %><br> <%= t.text_field :name %> </div> 
+		<br>
+		<div class='actions'> <%= t.submit %> </div> 
+	<% end %>
 
 
-<h2>Current Users</h2>
 
-<% @users.each do |user| %>
-	<%= link_to user.name, user %>
-	<br>
-<% end %>
+</div>
 	
 
 </body>
