--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,11 +2,34 @@
 <html>
 <body>
 
-  <% @user.todos.each do |todo| %>
-    <%=link_to todo.task, todo%>
-    <br>
-  <% end %>
-	
+	<div class = "container">
+		<h1><%=@user.name%>'s todos</h1>
+	  <div class = "row todo_header">
+		  <div class= "col-xs-2"></div>
+		  <div class= "col-xs-2">Due Date</div>
+		  <div class= "col-xs-3">Task</div>
+		  <div class= "col-xs-1">Complete?</div>
+		  <div class= "col-xs-1">Task ID</div>
+		  <div class= "col-xs-1">Edit/Delete</div>
+		  <div class= "col-xs-2"></div>
+		</div>
 
+		<!-- display each task for a user -->
+	  <% @user.todos.each do |todo| %>
+	  	<div class = "row">
+				<div class= "col-xs-2"></div>
+	    	<div class= "col-xs-2"><%=todo.due_date%></div>
+	    	<div class= "col-xs-3"><%=todo.task%></div>
+	    	<div class= "col-xs-1"><%=todo.complete%></div>
+	    	<div class= "col-xs-1"><%=link_to todo.id, todo%></div>
+	    	<div class= "col-xs-1">
+	      	<%=link_to "edit", controller: "todos", id: todo, action: "edit" %>
+	    		<%=link_to "delete", todo, method: "delete" %>
+	    	</div>
+	    </div>
+  <% end %>
+
+  <%= link_to "List of all users", '/users' %>
+	</div>
 </body>
 </html>
