--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -2,25 +2,53 @@
 <html>
 <body>
 
-	<%= form_for (@todo) do |t| %> 
-		<div class="field"> <%= t.label :task %><br> <%= t.text_field :task %> </div> 
-		<div class="field"> <%= t.label :user_id %><br> <%= t.text_field :user_id %> </div>
-		<div class="field"> <%= t.label :due_date %><br> <%= t.date_field :due_date %> </div> 
-		<div class='actions'> <%= t.submit %> </div> 
-	<% end %>
+	<!-- show all todos in the database -->
+  <div class = "container">
+    <h1>All Todos</h1>
+    <div class = "row todo_header">
+      <div class= "col-xs-2"></div>
+      <div class= "col-xs-2">Due Date</div>
+      <div class= "col-xs-2">Task</div>
+      <div class= "col-xs-1">User</div>
+      <div class= "col-xs-1">Complete?</div>
+      <div class= "col-xs-1">Task ID</div>
+      <div class= "col-xs-1">Edit/Delete</div>
+      <div class= "col-xs-2"></div>
+    </div>
 
-	<h1>All Todos</h1>
-  <% @todos.each do |todo| %>
-    	<%=todo.due_date%>
-    	<%=todo.task%>
-    	<%=todo.user.name%>
-    	<%=todo.complete%>
-    	<%=link_to todo.id, todo%>
-    	<%=link_to "edit", controller: "todos", id: todo, action: "edit" %>
-    	<%=link_to "delete", todo, method: "delete" %>
-    <br>
-  <% end %>
-	
+    <% @todos.each do |todo| %>
+    <div class = "row">
+      <div class= "col-xs-2"></div>
+    	<div class= "col-xs-2"><%=todo.due_date%></div>
+    	<div class= "col-xs-2"><%=todo.task%></div>
+    	<div class= "col-xs-1"><%=todo.user.name%></div>
+    	<div class= "col-xs-1"><%=todo.complete%></div>
+    	<div class= "col-xs-1"><%=link_to todo.id, todo%></div>
+    	<div class= "col-xs-1">
+        <%=link_to "edit", controller: "todos", id: todo, action: "edit" %>
+    	 <%=link_to "delete", todo, method: "delete" %>
+      </div>
+      <div class= "col-xs-2"></div>
+    </div>
+    <% end %>
+
+
+    <h1>Create New Todo</h1>
+    <div class = "row">
+      <div class= "col-xs-2"></div>
+      <div class = "col-xs-8">
+        <%= form_for (@todo) do |t| %> 
+          <%= t.label :due_date %><br> <%= t.date_field :due_date %> <br>
+          <%= t.label :task %><br> <%= t.text_field :task %><br>
+          <%= t.label :user_id %><br> <%= t.text_field :user_id %><br>
+          <br>
+          <%= t.submit %>
+        <% end %>
+      </div>
+      <div class = "col-xs-2"></div>
+    </div>
+  </div> 
+
 
 </body>
 </html>
