--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,17 +1,39 @@
 <!doctype html>
 <html>
-<body>
-    <%=@todo.task%>
-    <%=@todo.user.name%>
-    <%=@todo.complete%>
-    <%=link_to @todo.id, @todo%>
-    <%=link_to "edit", controller: "todos", id: @todo, action: "edit" %>
-    <%=link_to "delete", @todo, method: "delete" %>
+<body>	
+	<div class = "container">
+		<h1><%=@todo.task%></h1>
+	  <div class = "row todo_header">
+		  <div class= "col-xs-2"></div>
+		  <div class= "col-xs-2">Due Date</div>
+		  <div class= "col-xs-2">Task</div>
+		  <div class= "col-xs-1">User</div>
+		  <div class= "col-xs-1">Complete?</div>
+		  <div class= "col-xs-1">Task ID</div>
+		  <div class= "col-xs-1">Edit/Delete</div>
+		  <div class= "col-xs-2"></div>
+		</div>
+		<!-- show all todo data -->
+	    <div class = "row">
+	      <div class= "col-xs-2"></div>
+	    	<div class= "col-xs-2"><%=@todo.due_date%></div>
+	    	<div class= "col-xs-2"><%=@todo.task%></div>
+	    	<div class= "col-xs-1"><%=@todo.user.name%></div>
+	    	<div class= "col-xs-1"><%=@todo.complete%></div>
+	    	<div class= "col-xs-1"><%=link_to @todo.id, @todo%></div>
+	    	<div class= "col-xs-1">
+	        <%=link_to "edit", controller: "todos", id: @todo, action: "edit" %>
+	    	 <%=link_to "delete", @todo, method: "delete" %>
+	      </div>
+	      <div class= "col-xs-2"></div>
+	    </div>
 
-    <br>
-    <br>
-    <%= link_to "All Todos", '/todos' %>
+  	<br>
+  	<br>
+  	<%= link_to "List of All Todos", '/todos' %>	    
+	</div>
 
 
 </body>
 </html>
+
