--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -21,7 +21,7 @@
       <div class= "col-xs-2"></div>
     	<div class= "col-xs-2"><%=todo.due_date%></div>
     	<div class= "col-xs-2"><%=todo.task%></div>
-    	<div class= "col-xs-1"><%=todo.user.name%></div>
+    	<div class= "col-xs-1"><%=link_to todo.user.name, todo.user%></div>
     	<div class= "col-xs-1"><%=todo.complete%></div>
     	<div class= "col-xs-1"><%=link_to todo.id, todo%></div>
     	<div class= "col-xs-1">
@@ -34,20 +34,33 @@
 
 
     <h1>Create New Todo</h1>
-    <div class = "row">
+
+    <div class = "row todo_header">
       <div class= "col-xs-2"></div>
-      <div class = "col-xs-8">
-        <%= form_for (@todo) do |t| %> 
-          <%= t.label :due_date %><br> <%= t.date_field :due_date %> <br>
-          <%= t.label :task %><br> <%= t.text_field :task %><br>
-          <%= t.label :user_id %><br> <%= t.text_field :user_id %><br>
-          <br>
-          <%= t.submit %>
-        <% end %>
-      </div>
-      <div class = "col-xs-2"></div>
+      <div class= "col-xs-2">Due Date</div>
+      <div class= "col-xs-2">Task</div>
+      <div class= "col-xs-1">User ID</div>
+      <div class= "col-xs-1"></div>
+      <div class= "col-xs-2"></div>
+      <div class= "col-xs-1"></div>
+    </div>    
+
+    <div class = "row">
+      <%= form_for(@todo) do |t| %>
+        <div class= "col-xs-2"></div>
+        <div class= "col-xs-2"><%= t.date_field :due_date %></div>
+        <div class= "col-xs-2"><%= t.text_field :task, label: "Task" %></div>
+        <div class= "col-xs-1"><%= t.number_field :user_id, label: "User ID" %></div>
+        <div class= "col-xs-1"></div>          
+        <div class= "col-xs-2"><%= t.submit "Create", class: "btn" %></div>
+        <div class= "col-xs-1"></div>
+      <% end %>
     </div>
-  </div> 
+  </div>
+
+  <br>
+  <br>
+  <br>
 
 
 </body>
