--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div class = "container">
-	<h1>This is my To-do list.  There are many like it but this one is mine.</h1>
+	<!-- This is my To-do list.  There are many like it but this one is mine. -->
 
 	<h2>Current Users</h2>
 
